# shamir-secret-sharing

./: .gitignore  .pre-commit-config.yaml  README.md  gui.py  main.py  pyproject.toml  requirements.txt  shamir_core.py  web_gui.py
